--- a/NEURODASH/assets/css/layout/grid.css
+++ b/NEURODASH/assets/css/layout/grid.css
@@ -7,6 +7,26 @@
 
 .config-invitado{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     gap: 20px;
+}
+
+.login-invitado{
+    width: 100% !important;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.card-option-grid{
+    width: 100%;
+    height: 401px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+}
+
+.card-option-invit{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 80% 20%;
 }
