--- a/NEURODASH/views/config/configStart.html
+++ b/NEURODASH/views/config/configStart.html
@@ -12,97 +12,122 @@
     <!-- librerias -->
     <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
-    <script src="../../assets/js/sound/controlles.js"></script>
+    <!-- <script src="../../assets/js/sound/controlles.js"></script> -->
     
 </head>
 <body class="aling-item-centerN backgrond-config">
-    <div class="col-12 row">
-        <div class="col-4 d-flex justify-content-start">
-            <img src="../../assets/img/iconos/deshacer.png" alt="" class="devolver-config">
-        </div>
-        <div class="col-lg-4">
-            <div class="card-config">
-                <div class="col-12 row option-config config-option-start">
-                    <div class="col-12 d-flex  justify-content-center">
-                        <img src="../../assets/img/iconos/config.png" alt="">
-                    </div>
-                    <div class="col-12 text-center p-3"><span>Configuraciones</span></div>
-                    <div class="col-12">
-                        <div class="option-configuraciones">
-                            <div class="option-one-config-s" data-option="1">
-                                <img src="../../assets/img/iconos/config-user.png" alt="email" class="size-icons-cofig">
-                                <span class="text-option">Cuenta</span>
-                            </div>
-                            <div class="option-one-config-s" data-option="2">
-                                <img src="../../assets/img/iconos/perfil.png" alt="Perfil" class="size-icons-cofig">
-                                <span class="text-option">Perfil</span>
-                            </div>
-                            <div class="option-one-config-s" data-option="3">
-                                <img src="../../assets/img/iconos/sonido.png" alt="Sonido" class="size-icons-cofig">
-                                <span class="text-option">Sonido</span>
-                            </div>
-                            <div class="option-one-config-s" data-option="4">
-                                <img src="../../assets/img/iconos/home.png" alt="Home" class="size-icons-cofig">
-                                <span class="text-option">Home</span>
-                            </div>
-                        </div>
-                    </div>
-
+    <div class="container p-4">
+        <div class="col-12">
+            <div class="row">
+                <div class="col-4 d-flex justify-content-start">
+                    <img src="../../assets/img/iconos/deshacer.png" alt="flecha-develover" class="devolver-config">
                 </div>
-                <!-- configuracioes cuenta -->
-                <div class="col-12 row option-config cuenta-config">
-                    <div class="col-12 d-flex  justify-content-center">
-                        <img src="../../assets/img/iconos/config-user.png" alt="">
-                    </div>
-                    <div class="col-12 text-center p-3"><span>Cuenta</span></div>
-                    <div class="col-12">
-                        <div class="option-configuraciones ">
-                            <div class="option-one-config option-cuenta">
-                                <img src="../../assets/img/iconos/email.png" alt="email" class="size-icons-cofig">
-                                <span class="text-option">Cambiar correo</span>
+                <div class="col-lg-4 p-4">
+                    <div class="card-config center-element-x">
+                        <div class="col-12">
+                            <div class="row option-config config-option-start">
+                                <div class="col-12 d-flex  justify-content-center">
+                                    <figure class="img-config">
+                                        <img src="../../assets/img/iconos/config.png" alt="tuerca-configuraciones">
+                                    </figure>
+                                </div>
+                                <div class="col-12 text-center p-3 font-4 size-text-1"><span>Configuraciones</span></div>
+                                <div class="col-12 p-4">
+                                    <div class="option-configuraciones">
+                                        <div class="option-one-config-s" data-option="1">
+                                            <figure class="size-icons-cofig-s">
+                                                <img src="../../assets/img/iconos/config-user.png" alt="email" class="center-element-x">
+                                            </figure>
+                                            <span class="text-option font-4 size-text-1">Cuenta</span>
+                                        </div>
+                                        <div class="option-one-config-s" data-option="2">
+                                            <figure class="size-icons-cofig-s">
+                                                <img src="../../assets/img/iconos/perfil.png" alt="Perfil" class="center-element-y">
+                                            </figure>
+                                            <span class="text-option font-4 size-text-1">Perfil</span>
+                                        </div>
+                                        <div class="option-one-config-s" data-option="3">
+                                            <figure class="size-icons-cofig-s">
+                                                <img src="../../assets/img/iconos/sonido.png" alt="Sonido" class="center-element-y">
+                                            </figure>
+                                            <span class="text-option font-4 size-text-1">Sonido</span>
+                                        </div>
+                                        <div class="option-one-config-s" data-option="4">
+                                            <figure class="size-icons-cofig-s">
+                                                <img src="../../assets/img/iconos/home.png" alt="Home" class="center-element-y">
+                                            </figure>
+                                            <span class="text-option font-4 size-text-1">Home</span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="option-one-config option-cuenta">
-                                <img src="../../assets/img/iconos/password.png" alt="Perfil" class="size-icons-cofig">
-                                <span class="text-option">Cambiar contraseña</span>
+        
+                        </div>
+                        <!-- configuracioes cuenta -->
+                        <div class="col-12 option-config cuenta-config">
+                            <div class="row">
+                                <div class="col-12 d-flex  justify-content-center">
+                                    <figure class="img-config p-2">
+                                        <img src="../../assets/img/iconos/config-user.png" alt="config-user">
+                                    </figure>
+                                </div>
+                                <div class="col-12 text-center p-3 font-4 size-text-1"><span>Cuenta</span></div>
+                                <div class="col-12 p-4">
+                                    <div class="option-configuraciones ">
+                                        <div class="option-one-config option-cuenta">
+                                            <img src="../../assets/img/iconos/email.png" alt="email" class="size-icons-cofig">
+                                            <span class="text-option font-4 size-text-1">Cambiar correo</span>
+                                        </div>
+                                        <div class="option-one-config option-cuenta">
+                                            <img src="../../assets/img/iconos/password.png" alt="Perfil" class="size-icons-cofig">
+                                            <span class="text-option font-4 size-text-1">Cambiar contraseña</span>
+                                        </div>
+                                        <div class="option-one-config option-cuenta" data-bs-toggle="modal" data-bs-target="#condiciones">
+                                            <img src="../../assets/img/iconos/dager.png" alt="Sonido" class="size-icons-cofig">
+                                            <span class="text-option font-4 size-text-1">Eliminar cuenta</span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="option-one-config option-cuenta" data-bs-toggle="modal" data-bs-target="#condiciones">
-                                <img src="../../assets/img/iconos/dager.png" alt="Sonido" class="size-icons-cofig">
-                                <span class="text-option">Eliminar cuenta</span>
+                        </div>
+                        <!-- configuracioes Perfil -->
+                        <div class="col-12 p-4 option-config perfil-config">
+                            <div class="row ">
+                                <div class="edit-name-perfil">
+                                    <img src="../../assets/img/iconos/editar-perfil.png" alt="">
+                                    <div class="input-container">
+                                        <input placeholder="name user" type="text" />
+                                    </div>
+                                    <button class="shadow__btn font-4 size-text-1">
+                                        Guardar
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- configuracioes Sonido -->
+                        <div class="col-12 p-4 option-config sonido-config">
+                            <div class="row">
+                                <div class="info-control text-center font-4 size-text-1">Controladores</div>
+                                <div class="controles-sonido">
+                                    <!-- Sonido -->
+                                    <div class="wrappper center-element-x">
+                                        <img src="../../assets/img/iconos/sonido-config.png" alt="">
+                                        <input type="range" min="0" id="inputRangeSonido" max="100" value="0">
+                                        <span class="slide-value-sonido">0</span>
+                                    </div>
+                                    <!-- musica -->
+                                    <div class="wrappper center-element-x">
+                                        <img src="../../assets/img/iconos/musica-config.png" alt="">
+                                        <input type="range" min="0" id="inputRangeMusic" max="100" value="0">
+                                        <span class="slide-value-music">0</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- configuracioes Perfil -->
-                <div class="col-12 row option-config perfil-config">
-                    <div class="edit-name-perfil">
-                        <img src="../../assets/img/iconos/editar-perfil.png" alt="">
-                        <div class="input-container">
-                            <input placeholder="name user" type="text" />
-                        </div>
-                        <button class="shadow__btn">
-                            Guardar
-                        </button>
-                    </div>
-                </div>
-                <!-- configuracioes Sonido -->
-                <div class="col-12 row option-config sonido-config">
-                    <div class="info-control text-center">Controladores</div>
-                    <div class="controles-sonido">
-                        <!-- Sonido -->
-                        <div class="wrappper center-element-x">
-                            <img src="../../assets/img/iconos/sonido-config.png" alt="">
-                            <input type="range" min="0" id="inputRangeSonido" max="100" value="0">
-                            <span class="slide-value-sonido">0</span>
-                        </div>
-                        <!-- musica -->
-                        <div class="wrappper center-element-x">
-                            <img src="../../assets/img/iconos/musica-config.png" alt="">
-                            <input type="range" min="0" id="inputRangeMusic" max="100" value="0">
-                            <span class="slide-value-music">0</span>
-                        </div>
-                    </div>
-                </div>
-
+                <div class="col-4"></div>
+    
             </div>
         </div>
     </div>
@@ -136,10 +161,9 @@
         </div>
     </div>
     
-    <script src="../../assets/js/page/config.js"></script>
     <!-- script locales -->
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/sound/sonido.js"></script>
+    <script src="../../assets/js/main.js"></script>
+    <!-- <script src="assets/js/sound/sonido.js"></script> -->
     <script src="../../lib/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="../../lib/bootstrap/js/bootstrap.js"></script>
 
