--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -22,179 +22,179 @@
     <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
 
-  <body class="backgound-start">
+  <body class="fondo-home">
 
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        
+        <!-- Información de usuario -->
+        <div class="dropdown usuario mx-lg-5">
+          <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de usuario">
+            <img class="icon-nav" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="Icono de usuario" />
+            <span>Yisus</span>
+          </button>
+          <ul class="dropdown-menu mt-3 bg-dark menu-user">
+            <li class="m-2 p-2">
+              <div class="row aling-item-centerN">
+                <div class="text-center col-7 menu me-2 ">
+                  <img class="icon-home" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="User" />
+                  <span class="text-white">Yisus</span>
+                </div>
+                <div class="col-4 menu text-center" data-bs-toggle="modal" data-bs-target="#modalBonos">
+                  <img class="icon-home" src="../assets/img/iconos-desarrollo/img-bonos.png" alt="Bonos" />
+                </div>
+              </div>
+            </li>
+            <li class="m-2">
+              <div class="info">
+                <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
+                <label class="text-white col-form-label">Liga: Oro</label>
+              </div>
+            </li>
+            <li class="m-2 menu p-2">
+              <span class="text-white">Exp:</span>
+              <div class="progress" role="progressbar" aria-label="Barra de progreso" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" style="width: 75%">1500/2000</div>
+              </div>
+            </li>
+            <li class="m-2">
+              <div class="row aling-item-centerN">
+                <div class="col-9">
+                  <label class="text-white col-form-label">500 Exp y llegarás al Rango Cristal</label>
+                </div>
+                <div class="col-3 aling-item-centerN">
+                  <img class="icon-home" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Rango" />
+                </div>
+              </div>
+            </li>
+            <li class="text-center">
+              <div class="info-sesion">
+                <a href="../index.html" class="btn fondo-btn">Cerrar Sesión</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        
+        <!-- Información de ligas -->
+        <div class="dropdown ligas">
+          <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de ligas">
+            <span>Ligas:</span>
+            <img class="icon-nav" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Icono de ligas" />
+          </button>
           
-          <!-- Información de usuario -->
-          <div class="dropdown usuario mx-lg-5">
-            <button type="button" class="btn fondo-btn" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de usuario">
-              <img class="icon-nav" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="Icono de usuario" />
-              <span>Yisus</span>
-            </button>
-            <ul class="dropdown-menu mt-3 bg-dark menu-user">
-              <li class="m-2 p-2">
-                <div class="row aling-item-centerN">
-                  <div class="text-center col-7 menu me-2 ">
-                    <img class="icon-home" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="User" />
-                    <span class="text-white">Yisus</span>
-                  </div>
-                  <div class="col-4 menu text-center" data-bs-toggle="modal" data-bs-target="#modalBonos">
-                    <img class="icon-home" src="../assets/img/iconos-desarrollo/img-bonos.png" alt="Bonos" />
-                  </div>
+          <div class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start mt-3 bg-dark p-2">
+            <div class="aling-item-centerN m-2">
+              <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
+            </div>
+            <table class="table table-dark table-bordered">
+              <thead>
+                <tr>
+                  <th scope="col">Puesto</th>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Puntos</th>
+                </tr>
+              </thead>
+              <tbody class="table-bordered" id="tablaJugadores">
+                <!-- Se completa con JavaScript -->
+              </tbody>
+            </table>
+            <div class="text-end me-3">
+              <div class="btn fondo-btn">+32</div>
+            </div>
+          </div>
+        </div>
+        
+        <!-- Botón de menú hamburguesa -->
+        <button class="navbar-toggler fondo-btn btn-nav" type="button" data-bs-toggle="modal" data-bs-target="#menu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <!-- Offcanvas para otras opciones -->
+        <div class="offcanvas offcanvas-end">
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <!-- Opciones adicionales (Historial, Notificaciones, Configuraciones) -->
+              <li class="nav-item m-1">
+                <div class="dropdown">
+                  <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img class="icon-home" src="../assets/img/iconos/icon-historial.png" alt="Historial" />
+                  </button>
+                  <ul class="bg-dark dropdown-menu mt-3">
+                    <li class="m-2">
+                      <div class="menu">
+                        <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
+                        <span class="text-white">Yisus</span>
+                        <span class="text-podio">+1000</span>
+                      </div>
+                    </li>
+                    <li class="m-2">
+                      <div class="menu">
+                        <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
+                        <span class="text-white">Yisus</span>
+                        <span class="text-podio">+1000</span>
+                      </div>
+                    </li>
+                    <li class="m-2">
+                      <div class="menu">
+                        <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
+                        <span class="text-white">Yisus</span>
+                        <span class="text-podio">+1000</span>
+                      </div>
+                    </li>
+                    <li class="m-2">
+                      <div class="menu">
+                        <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
+                        <span class="text-white">Yisus</span>
+                        <span class="text-podio">+1000</span>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
               </li>
-              <li class="m-2">
-                <div class="info">
-                  <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
-                  <label class="text-white col-form-label">Liga: Oro</label>
+              <li class="nav-item m-1">
+                <div class="dropdown">
+                  <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false">
+                    <div class="notification aling-item-centerN">
+                      <div class="bell-container">
+                        <div class="bell"></div>
+                      </div>
+                    </div>
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-end bg-dark mt-3">
+                    <li class="m-2">
+                      <a href="#" class="dropdown-item menu p-2">
+                        <img class="icon-home" src="../assets/img/iconos/icon-msg.png" alt="Mensaje" />
+                        <span class="text-white">Felicidades has alcanzado ...</span>
+                      </a>
+                    </li>
+                    <li class="m-2">
+                      <a href="#" class="dropdown-item menu p-2">
+                        <img class="icon-home" src="../assets/img/iconos/icon-msg.png" alt="" />
+                        <span class="text-white">Perdiste 10 puntos por abandonar de sala</span>
+                      </a>
+                    </li>
+                    <li class="m-2">
+                      <a href="#" class="dropdown-item menu p-2">
+                        <img class="icon-home" src="../assets/img/iconos/icon-danger.png" alt="" />
+                        <span class="text-white">Se ha cambiado la contraseña eres tu?</span>
+                      </a>
+                    </li>
+
+                  </ul>
                 </div>
               </li>
-              <li class="m-2 menu p-2">
-                <span class="text-white">Exp:</span>
-                <div class="progress" role="progressbar" aria-label="Barra de progreso" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                  <div class="progress-bar" style="width: 75%">1500/2000</div>
-                </div>
-              </li>
-              <li class="m-2">
-                <div class="row aling-item-centerN">
-                  <div class="col-9">
-                    <label class="text-white col-form-label">500 Exp y llegarás al Rango Cristal</label>
-                  </div>
-                  <div class="col-3 aling-item-centerN">
-                    <img class="icon-home" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Rango" />
-                  </div>
-                </div>
-              </li>
-              <li class="text-center">
-                <div class="info-sesion">
-                  <a href="../index.html" class="btn fondo-btn">Cerrar Sesión</a>
-                </div>
+              <li class="nav-item m-1">
+                <a href="config/configStart.html" class="btn fondo-btn btn-nav">
+                  <img class="icon-home" src="../assets/img/iconos/config.png" alt="Configuración" />
+                </a>
               </li>
             </ul>
           </div>
-          
-          <!-- Información de ligas -->
-          <div class="dropdown ligas">
-            <button type="button" class="btn fondo-btn" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de ligas">
-              <span>Ligas:</span>
-              <img class="icon-nav" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Icono de ligas" />
-            </button>
-            
-            <div class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start mt-3 bg-dark p-2">
-              <div class="aling-item-centerN m-2">
-                <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
-              </div>
-              <table class="table table-dark table-bordered">
-                <thead>
-                  <tr>
-                    <th scope="col">Puesto</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Puntos</th>
-                  </tr>
-                </thead>
-                <tbody class="table-bordered" id="tablaJugadores">
-                  <!-- Se completa con JavaScript -->
-                </tbody>
-              </table>
-              <div class="text-end me-3">
-                <div class="btn fondo-btn">+32</div>
-              </div>
-            </div>
-          </div>
-          
-          <!-- Botón de menú hamburguesa -->
-          <button class="navbar-toggler fondo-btn" type="button" data-bs-toggle="modal" data-bs-target="#menu">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          
-          <!-- Offcanvas para otras opciones -->
-          <div class="offcanvas offcanvas-end">
-            <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <!-- Opciones adicionales (Historial, Notificaciones, Configuraciones) -->
-                <li class="nav-item m-1">
-                  <div class="dropdown">
-                    <button type="button" class="btn fondo-btn" data-bs-toggle="dropdown" aria-expanded="false">
-                      <img class="icon-home" src="../assets/img/iconos/icon-historial.png" alt="Historial" />
-                    </button>
-                    <ul class="bg-dark dropdown-menu mt-3">
-                      <li class="m-2">
-                        <div class="menu">
-                          <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
-                          <span class="text-white">Yisus</span>
-                          <span class="text-podio">+1000</span>
-                        </div>
-                      </li>
-                      <li class="m-2">
-                        <div class="menu">
-                          <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
-                          <span class="text-white">Yisus</span>
-                          <span class="text-podio">+1000</span>
-                        </div>
-                      </li>
-                      <li class="m-2">
-                        <div class="menu">
-                          <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
-                          <span class="text-white">Yisus</span>
-                          <span class="text-podio">+1000</span>
-                        </div>
-                      </li>
-                      <li class="m-2">
-                        <div class="menu">
-                          <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
-                          <span class="text-white">Yisus</span>
-                          <span class="text-podio">+1000</span>
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </li>
-                <li class="nav-item m-1">
-                  <div class="dropdown">
-                    <button type="button" class="btn fondo-btn" data-bs-toggle="dropdown" aria-expanded="false">
-                      <div class="notification aling-item-centerN">
-                        <div class="bell-container">
-                          <div class="bell"></div>
-                        </div>
-                      </div>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end bg-dark mt-3">
-                      <li class="m-2">
-                        <a href="#" class="dropdown-item menu p-2">
-                          <img class="icon-home" src="../assets/img/iconos/icon-msg.png" alt="Mensaje" />
-                          <span class="text-white">Felicidades has alcanzado ...</span>
-                        </a>
-                      </li>
-                      <li class="m-2">
-                        <a href="#" class="dropdown-item menu p-2">
-                          <img class="icon-home" src="../assets/img/iconos/icon-msg.png" alt="" />
-                          <span class="text-white">Perdiste 10 puntos por abandonar de sala</span>
-                        </a>
-                      </li>
-                      <li class="m-2">
-                        <a href="#" class="dropdown-item menu p-2">
-                          <img class="icon-home" src="../assets/img/iconos/icon-danger.png" alt="" />
-                          <span class="text-white">Se ha cambiado la contraseña eres tu?</span>
-                        </a>
-                      </li>
-                      <!-- Más elementos del menú de notificaciones -->
-                    </ul>
-                  </div>
-                </li>
-                <li class="nav-item m-1">
-                  <a href="config/configStart.html" class="btn fondo-btn">
-                    <img class="icon-home" src="../assets/img/iconos/config.png" alt="Configuración" />
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          
         </div>
-      </nav>
+        
+      </div>
+    </nav>
+    <div class="container">
       
       <div class="main aling-item-centerN">
         <div class="container">
@@ -230,9 +230,8 @@
     
 
 
-
     <!-- Modal Bonos-->
-    <div class="modal fade card-fondo" id="modalBonos" tabindex="-1" aria-labelledby="modalBonos" aria-hidden="true">
+    <div class="modal fade card-fondo modal-home" id="modalBonos" tabindex="-1" aria-labelledby="modalBonos" aria-hidden="true">
       <div class="modal-dialog modal-sm modal-dialog-centered">
         <div class="modal-content bg-dark">
           <div class="modal-header">
@@ -271,7 +270,7 @@
     </div>
 
     <!-- Modal Historial 2 -->
-    <div class="modal fade card-fondo" id="modalHistorial" aria-labelledby="modalHistorial" aria-hidden="true"
+    <div class="modal fade card-fondo modal-home" id="modalHistorial" aria-labelledby="modalHistorial" aria-hidden="true"
       tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-dark">
@@ -316,7 +315,7 @@
     </div>
 
     <!-- Modal Notificaciones 3 -->
-    <div class="modal fade card-fondo" id="modalNotificaciones" aria-hidden="true" aria-labelledby="modalNotificaciones"
+    <div class="modal fade card-fondo modal-home" id="modalNotificaciones" aria-hidden="true" aria-labelledby="modalNotificaciones"
       tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-dark">
@@ -377,7 +376,7 @@
     </div>
 
     <!-- Modal Configuracion 1 -->
-    <div class="modal fade card-fondo" id="menu" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade card-fondo modal-home" id="menu" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-sm">
         <div class="modal-content">
           <div class="modal-header bg-dark">
@@ -415,7 +414,7 @@
     </div>
 
     <!-- Modal LIGAS-->
-    <div class="modal fade card-fondo" id="modalLigas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade card-fondo modal-home" id="modalLigas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-sm">
         <div class="modal-content">
           <div class="modal-header bg-dark">
