--- a/NEURODASH/views/salaEspera.html
+++ b/NEURODASH/views/salaEspera.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>sala de Espera</title>
+  
+    <!-- icono pag -->
+  <link rel="icon" href="../assets/img/iconos-principales/rayo_nuzit.icon" />
+  <!-- librerias bootstrap -->
   <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="../lib/fontawesome/css/all.min.css">
-    <!-- <link rel="stylesheet" href="../assets/css/salaEspera.css" /> -->
-    <link rel="stylesheet" href="../assets/css/main.css">
+  <!-- <link rel="stylesheet" href="../assets/css/salaEspera.css" /> -->
+  <link rel="stylesheet" href="../assets/css/main.css">
 </head>
-<body class='salaEspera'>
+<body class='backgound-uno'>
 
   <div class="container">
 
@@ -17,318 +21,13 @@
 
       <div class="animation-01 mt-3">
 
-        <div class="aling-item-centerN m-3">
-          <div data-glitch="Esperando..." class="glitch">Esperando...</div>
+        <div class="text-center">
+          <span class="esperando"></span>
         </div>
 
-        <div class="contenedor-hexagonos aling-item-centerN">
 
-          <div class="hexagonos aling-item-centerN content-top">
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-              <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-
-          </div>
-
-          <div class="hexagonos aling-item-centerN content-top2">
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-              <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-
-          </div>
-
-          <div class="hexagonos aling-item-centerN content-half">
-
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              <div class="content-img mt-3">
-              <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-
-          </div>
-
-          
-          <div class="hexagonos aling-item-centerN content-button2">
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              <div class="content-img mt-3">
-              <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-            
-          </div>
-
-          <div class="hexagonos aling-item-centerN content-button">
-
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-          
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-          
-            <div class="content-hex aling-item-centerN button-hex" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              
-              <div class="content-img mt-3">
-                <img src="../assets/img/iconos-desarrollo/icono-user.svg" alt="">
-              </div>
-              
-              <div class="content-name">
-                  <p class="text-center">name</p>
-              </div>
-
-            </div>
-
-          </div>
+        <div id="contenedor-hexagonos" class="contenedor-hexagonos aling-item-centerN flex-column">
+            <!-- se llena con js -->
             
         </div>
         
@@ -338,47 +37,35 @@
 
 
   
-<!-- Modal -->
-<div class="modal fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm modal-dialogz modal-dialog-centered">
-    <div class="modal-content bg-dark">
-      <div class="modal-header">
-        <!-- <h1 class="modal-title fs-5" id="exampleModalLabel"> -->
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-
-          <div class="content-name-user aling-item-centerN">
-            <p class="text-white">Name</p>
+  <!-- Modal -->
+  <div class="modal modal-espera fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm modal-dialogz modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header bg-dark">
+          <div class="text-center p-1">
+            <img class="icon-nav" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="User" />
+            <span class="text-white" id="modalUsername"></span>
           </div>
-
-
-        <div class="info-rango">
-
-          <div class="content-liga d-flex align-items-center">
-            <p class="text-white">rango:</p>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body bg-dark">
+          <div class="mb-1 info">
+            <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
+            <label class="text-white col-form-label">Liga: <span id="modalLiga"></span></label>
           </div>
-
-          <div class="content-img mt-3-liga">
-            <img src="../assets/img/iconos-desarrollo/icono-rango.png" alt="liga">
-          </div>
-
-          <div class="content-Exp d-flex align-items-center">
-            <p class="text-white">Exp:</p>
-          </div>
-
-          <div class="info-progres mt-2">
+          <div class="mb-1">
+            <span class="text-white">Exp:</span>
             <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-              <div class="progress-bar" style="width: 50%"></div>
+              <div class="progress-bar" style="width: 50%" id="modalExp"></div>
             </div>
           </div>
-
+          <div class="mb-1">
+            <label class="col-form-label text-white">Bonos:</label>
+            <input type="text" class="form-control" id="modalBono" disabled />
+          </div>
+        </div>
       </div>
-
-    </div>
   </div>
-</div>
-
   </div>
   
 
