--- a/NEURODASH/views/tematicaEntrenamiento.html
+++ b/NEURODASH/views/tematicaEntrenamiento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dificultad</title>
+    <title>NEURODASH</title>
     <link rel="icon" href="../assets/img/iconos-principales/rayo_nuzit.icon">
 
     <link rel="stylesheet" href="../assets/css/main.css">
@@ -18,7 +18,7 @@
           <div class="col-1">
             <div class="col-12 d-flex justify-content-start">
               <button class="btn-devolver">
-                <a href="Entramiento.html"><img src="../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
+                <a href="entrenamiento.html"><img src="../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
               </button>
             </div>
           </div>
