--- a/NEURODASH/assets/css/components/buttons.css
+++ b/NEURODASH/assets/css/components/buttons.css
@@ -441,7 +441,7 @@ max-height: 200px;
 }
 
 
-/* From Uiverse.io by vinodjangid07 */ 
+
 .buttonNext {
   position: relative;
   width: 100%;
@@ -992,4 +992,74 @@ max-height: 200px;
               0 0 12px rgb(0,140,255);
 }
 
+
+.btnCrSala{
+  --bezier: cubic-bezier(0.22, 0.61, 0.36, 1);
+  --edge-light: hsla(0, 0%, 50%, 0.8);
+  --text-light: rgba(255, 255, 255, 0.4);
+
+  cursor: pointer;
+  padding: 0.7em 1em;
+  border-radius: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+
+  font-size: 24px;
+  letter-spacing: 0.05em;
+  line-height: 1;
+  font-weight: bold;
+
+  color: rgb(0, 0, 0);
+  border: 0;
+
+  transition: all 0.1s var(--bezier);
+  width: 80%;
+  height: 55px;
+  margin-bottom: 15px;
+  margin-top: 10px;
+  box-shadow: 0 0 21px rgb(0, 0, 0);
+  box-sizing: border-box;
+  box-shadow: 0 0 10px 8px #000000cb;
+}
+
+.btnCrSala:hover {
+  --edge-light: hsla(0, 0%, 50%, 1);
+  text-shadow: 0px 0px 10px var(--text-light);
+  box-shadow: inset 0.4px 1px 4px var(--edge-light),
+    2px 4px 8px hsla(0, 0%, 0%, 0.295);
+  transform: scale(1.1);
+}
+
+
+.btnCrSala2{
+  --bezier: cubic-bezier(0.22, 0.61, 0.36, 1);
+  --edge-light: hsla(0, 0%, 50%, 0.8);
+  --text-light: rgba(255, 255, 255, 0.4);
+
+  padding: 0.7em 1em;
+  border-radius: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+
+  font-size: 24px;
+  letter-spacing: 0.05em;
+  line-height: 1;
+  font-weight: bold;
+
+  color: rgb(0, 0, 0);
+  border: 0;
+
+  transition: all 0.1s var(--bezier);
+  width: 80%;
+  height: 55px;
+  margin-bottom: 15px;
+  margin-top: 10px;
+  box-shadow: 0 0 21px rgb(0, 0, 0);
+  box-sizing: border-box;
+  box-shadow: 0 0 10px 8px #000000cb;
+}
 
