--- a/NEURODASH/assets/css/pages/entrenamiento.css
+++ b/NEURODASH/assets/css/pages/entrenamiento.css
@@ -14,13 +14,32 @@
     filter:drop-shadow(0 0 10px rgba(0, 0, 0, 0.671));
   }
 
+  .logito-podio2,
   .logito-podio{
     margin-top: 15px;
     width: 20%;
     height: auto;
     filter:drop-shadow(0 0 10px rgba(0, 0, 0, 0.671));
     }
-  
+
+    .logito-podio2{
+      animation: slide-right-left 1.5s infinite ease-in-out alternate;      
+    }
+
+    @keyframes slide-right-left {
+      0% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+      }
+      100% {
+        -webkit-transform: translateX(100px);
+        transform: translateX(100px);
+      }
+    }
+    
+
+    
+    
 /* tematica entrenamiento */
 .logitoCerebro{
   width: 30%;
@@ -344,20 +363,61 @@
   box-shadow: 0 0 10px 8px #0a0a0a
   }
 
-  .podio {   
-    /* margin: 0;  */
+   .podio {   
     border: none;
     box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
-    /* outline: 3px solid #000000; */
     box-sizing: border-box;
     box-shadow: 0 0 10px 8px #0a0a0a;
      width:800px; 
      max-height: 400px; 
      overflow-y: auto;
     
-    }
+    } 
 
-  
+  .podio1{
+    height:300px;
+    width:100%; 
+    background-color: #45b5ff;
+    box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+    box-sizing: border-box;
+    box-shadow: 0 0 10px 8px #0a0a0a;
+    border-radius: 15px; 
+    z-index: 1;
+   
+  }
+
+  .podio2 {   
+  height: 400px;
+  width:100%; 
+  background-color: #10fa71;
+  border-radius: 15px; 
+  box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+    box-sizing: border-box;
+    box-shadow: 0 0 10px 8px #0a0a0a;
+    z-index: 2;
+   
+
+  }
+
+  .podio3 {   
+  height: 300px;
+  width:100%; 
+  background-color: #fd559b;
+  border-radius: 15px; 
+  box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  box-shadow: 0 0 10px 8px #0a0a0a;
+  z-index: 1;
+
+  } 
+      
+  .img-puesto{
+    width: 200px; 
+    height: 150px;
+    animation: slideIn 1s ease-in-out;
+
+  }
+
   .recuadros-items{
     width: 100%;
     font-size: 10px;
@@ -489,6 +549,146 @@
 }
 
 
+.rotate-center {
+  animation: flip-scale-up-hor 0.5s linear both;
+}
+
+@keyframes flip-scale-up-hor {
+  0% {
+    -webkit-transform: scale(1) rotateX(0);
+            transform: scale(1) rotateX(0);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateX(-360deg);
+            transform: scale(1) rotateX(-360deg);
+  }
+}
+
+
+.estilo {
+  transform: translateY(100%); 
+  transition: transform 2s ease; 
+
+}
+
+
+.estilo.animate{
+  transform: translateY(0);
+}
+
+.tablePodio {
+  border-radius: 15px;
+  overflow: hidden; 
+  width: 100%;
+  box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  box-shadow: 0 0 10px 8px #0a0a0a;
+}
+
+.tablePodio thead {
+  background-color: rgb(252, 67, 190);
+}
+
+.tablePodio tbody {
+  background-color: #10fa71;
+}
+
+.tablePodio tr{
+  text-align: center;
+}
+
+
+.cuadroSala {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  position: relative;
+  flex-direction: column;
+  background-color: #53fa3d;
+  border-radius: 20px;
+  width: 400px;
+  height: 60px;
+    box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+    box-sizing: border-box;
+    box-shadow: 0 0 10px 8px #0a0a0a;
+
+}
+
+
+.imgSalaCrear {
+  background-color: rgb(25, 123, 252);
+  border-radius: 50%;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
+  position: absolute;
+  left: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 90px;
+  box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  box-shadow: 0 0 10px 8px #0a0a0a;
+}
+
+.imgHome-sala{
+  background-color: #45e725;
+  border-radius: 50%;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
+  position: absolute;
+  right: 90%;
+  bottom: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 90px;
+  box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+  box-sizing: border-box;
+  box-shadow: 0 0 10px 8px #0a0a0a;
+}
+
+.hmeSala{
+  width: 80%;
+  height: 80%;
+}
+
+.img-crear{
+  width: 80%;
+  height: 80%;
+  /* border-radius: 50%; */
+  object-fit: cover; 
+}
+
+.logoNDash{
+  width: 65%;
+  height: 100%;
+}
+
+.crearSalaC{
+  border: none;
+  box-shadow: 0 0 21px rgba(0, 0, 0, 0.144);
+  box-sizing: border-box;
+  box-shadow: 0 0 10px 8px #000000;
+  width:80%; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cantiJug{
+  background-color: transparent; 
+  border: none; 
+  color: rgb(0, 0, 0); 
+  text-align: center; 
+  font-size: 30px; 
+  font-weight: 800;
+  width: 60px; 
+  outline: none;
+}
+
+
+
 
 
 /* ----media query -- */
@@ -563,51 +763,4 @@
   }
 
   
-}
-
-.rotate-center {
-  animation: flip-scale-up-hor 0.5s linear both;
-}
-
-@keyframes flip-scale-up-hor {
-  0% {
-    -webkit-transform: scale(1) rotateX(0);
-            transform: scale(1) rotateX(0);
-  }
-  100% {
-    -webkit-transform: scale(1) rotateX(-360deg);
-            transform: scale(1) rotateX(-360deg);
-  }
-}
-
-
-.estilo {
-  transform: translateY(100%); 
-  transition: transform 2s ease; 
-
-}
-
-
-.estilo.animate{
-  transform: translateY(0);
-}
-
-.tablePodio {
-  border-radius: 10px; /* Radio de borde para redondear esquinas */
-  overflow: hidden; /* Asegura que los bordes redondeados se apliquen */
-  background: linear-gradient(to right, #4CAF50, #81C784); /* Fondo con degradado */
-  color: white; /* Color del texto */
-}
-
-
-.tablePodio th {
-  background-color: rgba(255, 255, 255, 0.2); /* Fondo semi-transparente para el encabezado */
-}
-
-.tablePodio tbody tr:nth-child(even) {
-  background-color: rgba(255, 255, 255, 0.1); /* Fondo alternativo para filas */
-}
-
-.tablePodio tbody tr:hover {
-  background-color: rgba(255, 255, 255, 0.2); /* Fondo al pasar el ratón */
 }
