--- a/NEURODASH/assets/css/utilities/text.css
+++ b/NEURODASH/assets/css/utilities/text.css
@@ -12,15 +12,107 @@
     font-weight: 600;
 } 
 
-
 .titulo-tematica{
     text-align: center;
-    font-size: 23px;
     font-weight: 800;
     text-transform: uppercase;
+    font-size: 23px;
   }
 
+  /* .titulo-tematica2{
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 55px;
+    font-weight: 700;
+    font-family: 'Exo 2', sans-serif;
+    line-height: 0.8;
+    color: #ffdb2b;
+    transition: all 0.5s;
+    transform: perspective(2.5em) rotateX(15deg) scaleY(0.8);
+    text-shadow: 
+      0 -1px 15px rgba(0,0,0,0.9),
+      0 1px 0 hsl(45, 100%, 20%),
+      0 3px 0 hsl(45, 100%, 21%),
+      0 5px 0 hsl(45, 100%, 22%),
+      0 7px 0 hsl(45, 100%, 23%),
+      0 9px 0 hsl(45, 100%, 24%),
+      0 6px 50px rgba(255, 223, 60, 0.8);
+    
+  }
 
+  .titulo-tematica2::first-line{
+    font-size: 0.8em;
+
+  }
+
+  .titulo-tematica2:hover{
+    transform: perspective(8em) rotateX(11deg) scale(1.2);
+    text-shadow:
+      0 -1px 15px black,
+      0 1px 0 hsl(45, 100%, 20%),
+      0 2px 0 hsl(45, 100%, 21%),
+      0 0px 0 hsl(45, 100%, 22%),
+      0 1px 0 hsl(45, 100%, 23%),
+      0 2px 0 hsl(45, 100%, 24%),
+      0 2px 30px rgba(255, 223, 60, 0.6);
+  } */
+
+  .titulo-tematica2 {
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 55px;
+    font-weight: 700;
+    font-family: 'Exo 2', sans-serif;
+    line-height: 0.8;
+    color: #ffdb2b;
+    animation: tituloAnimacion 3s infinite;
+    transition: all 0.5s;
+  }
+  
+  .titulo-tematica2::first-line {
+    font-size: 0.8em;
+  }
+
+  @keyframes tituloAnimacion {
+    0% {
+      transform: perspective(2.5em) rotateX(15deg) scaleY(0.8);
+      text-shadow: 
+        0 -1px 15px rgba(0,0,0,0.9),
+        0 1px 0 hsl(45, 100%, 20%),
+        0 3px 0 hsl(45, 100%, 21%),
+        0 5px 0 hsl(45, 100%, 22%),
+        0 7px 0 hsl(45, 100%, 23%),
+        0 9px 0 hsl(45, 100%, 24%),
+        0 6px 50px rgba(255, 223, 60, 0.8);
+    }
+    50% {
+      transform: perspective(8em) rotateX(11deg) scale(1.2);
+      text-shadow:
+        0 -1px 15px black,
+        0 1px 0 hsl(45, 100%, 20%),
+        0 2px 0 hsl(45, 100%, 21%),
+        0 0px 0 hsl(45, 100%, 22%),
+        0 1px 0 hsl(45, 100%, 23%),
+        0 2px 0 hsl(45, 100%, 24%),
+        0 2px 30px rgba(255, 223, 60, 0.6);
+    }
+    100% {
+      transform: perspective(2.5em) rotateX(15deg) scaleY(0.8);
+      text-shadow: 
+        0 -1px 15px rgba(0,0,0,0.9),
+        0 1px 0 hsl(45, 100%, 20%),
+        0 3px 0 hsl(45, 100%, 21%),
+        0 5px 0 hsl(45, 100%, 22%),
+        0 7px 0 hsl(45, 100%, 23%),
+        0 9px 0 hsl(45, 100%, 24%),
+        0 6px 50px rgba(255, 223, 60, 0.8);
+    }
+  }
+  
   .letter{
     display: inline-block;
     font-weight: 900;
@@ -114,4 +206,9 @@
   font-size: 0.6em !important;
 }
 
-
+.nombre-Jugador{
+  flex-grow: 1; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
