--- a/NEURODASH/views/loader-Inicial.html
+++ b/NEURODASH/views/loader-Inicial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memorize-Nuzit</title>
+    <title>NEURODASH</title>
     <link rel="icon" href="../assets/img/iconos-principales/rayo_nuzit.icon">
 
     <link rel="stylesheet" href="../assets/css/main.css">
