arreglos-ante-proyecto

--- a/NEURODASH/views/login.html
+++ b/NEURODASH/views/login.html
@@ -11,7 +11,7 @@
     <!-- <link rel="stylesheet" href="../assets/css/login.css"> -->
     <link rel="stylesheet" href="../assets/css/main.css">
 </head>
-<body class="backgound-start">
+<body class="backgound-start-back">
     <div class="container aling-item-centerN min-vh-100">
         <div class="row border rounded-5 p-3 fondo-login shadow box-area">
             <div class="col-md-6 rounded-4 aling-item-centerN flex-column left-box" >
