--- a/NEURODASH/assets/css/components/card.css
+++ b/NEURODASH/assets/css/components/card.css
@@ -7,6 +7,7 @@
   background-color: rgba(0, 0, 0, 0.583);
   box-shadow: 0 0 8px #132ad6;
   overflow: hidden;
+  cursor: pointer;
   &:hover{
     border: 1px solid #7c0097;
     box-shadow: 0 0 10px #a001c4;
