--- a/NEURODASH/views/invitado/invitado_home.html
+++ b/NEURODASH/views/invitado/invitado_home.html
@@ -33,7 +33,7 @@
                                 <figure class="tm-das-invit d-flex justify-content-center">
                                     <img src="../../assets/img/iconos-principales/dash.png" alt="" class="img-global">
                                 </figure>
-                                <a href="" class="d-flex justify-content-center">
+                                <a href="../../index.html" class="d-flex justify-content-center">
                                     <button class="btn-diagol center-element-x font-4">Inicar sesión</button>
                                 </a>
                             </div>
@@ -41,13 +41,13 @@
                         <div class="col-md-7  d-none d-lg-flex">
                             <div class="col-12 d-flex align-items-center">
                                 <div class="card-option-grid">
-                                    <div class="card-option-invit center-element-x">
+                                    <div class="card-option-invit center-element-x entranamiento">
                                         <figure class="invite-img-entre">
                                             <img src="../../assets/img/iconos/elefante-pesas-down.png" alt="logo-entrenamiento">
                                         </figure>
                                         <span class="text-center font-4">ENTRENAMIENTO</span>
                                     </div>
-                                    <div class="card-option-invit center-element-x">
+                                    <div class="card-option-invit center-element-x unirseSala">
                                         <figure class="invite-img-entre">
                                             <img src="../../assets/img/iconos/elefante-linea.png" alt="logo-entrenamiento">
                                         </figure>
