--- a/NEURODASH/views/crearSala.html
+++ b/NEURODASH/views/crearSala.html
@@ -24,9 +24,11 @@
     </div>
 
     <div class="row">
-        <div class="col-6 d-flex align-items-center">
+        <div class="col-lg-6 d-flex align-items-center">
             <div class="col-12 d-flex justify-content-center align-items-center flex-column">
-                <h1 class="titulo-tematica2">CONFIGURACIÓN</h1>
+                <div class="title-prueba">
+                    <h1 class="titulo-tematica2">CONFIGURACIÓN</h1>
+                </div>
                 <div class="card crearSalaC p-2" style="background-color: rgb(17, 129, 233); border-radius: 15px;">
                         <a href="home.html" class="imgHome-sala">
                             <img src="../assets/img/iconos/home.png" alt="home" class="hmeSala">
@@ -48,13 +50,11 @@
             </div>
 
         </div>
-        <div class="col-6">
+        <div class="col-6 d-none d-lg-flex">
             <div class="col-12 d-flex justify-content-center align-items-center p-4">
                 <img src="../assets/img/iconos/neurodash.png" alt="neurodash" class="logoNDash">
             </div>
         </div>
-      
-      
     </div>
   </div>
 
