--- a/NEURODASH/views/juego/salaEspera.html
+++ b/NEURODASH/views/juego/salaEspera.html
@@ -6,12 +6,12 @@
   <title>sala de Espera</title>
   
     <!-- icono pag -->
-  <link rel="icon" href="../assets/img/iconos-principales/rayo_nuzit.icon" />
+  <link rel="icon" href="../../assets/img/iconos-principales/rayo_nuzit.icon" />
   <!-- librerias bootstrap -->
-  <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../lib/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../../lib/fontawesome/css/all.min.css">
   <!-- <link rel="stylesheet" href="../assets/css/salaEspera.css" /> -->
-  <link rel="stylesheet" href="../assets/css/main.css">
+  <link rel="stylesheet" href="../../assets/css/main.css">
 </head>
 <body class='backgound-uno'>
 
@@ -43,14 +43,14 @@
       <div class="modal-content">
         <div class="modal-header bg-dark">
           <div class="text-center p-1">
-            <img class="icon-nav" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="User" />
+            <img class="icon-nav" src="../../assets/img/iconos-desarrollo/icono-user.svg" alt="User" />
             <span class="text-white" id="modalUsername"></span>
           </div>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body bg-dark">
           <div class="mb-1 info">
-            <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
+            <img class="icon-liga" src="../../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
             <label class="text-white col-form-label">Liga: <span id="modalLiga"></span></label>
           </div>
           <div class="mb-1">
@@ -69,8 +69,8 @@
   </div>
   
 
-  <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../lib/fontawesome/js/all.min.js"></script>
-  <script src="../assets/js/salaEspera.js"></script>
+  <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../../lib/fontawesome/js/all.min.js"></script>
+  <script src="../../assets/js/salaEspera.js"></script>
 </body>
 </html>
