--- a/NEURODASH/assets/css/pages/home.css
+++ b/NEURODASH/assets/css/pages/home.css
@@ -1,4 +1,4 @@
-/* variables */
+/*-------------------- variables --------------------*/
 :root {
   --clr-gradiente: radial-gradient(
     circle,
@@ -20,10 +20,8 @@
 }
 /* -------------------- navbar --------------------  */
 
-.btn-nav{
-  height: 3rem;
-  width: auto;
-}
+.btn-nav {height: 3rem;}
+
 /* iconos navbar */
 .icon-nav {
   width: var(--width);
@@ -36,14 +34,14 @@
 
 .icon-home {
   height: calc(var(--width) * 2);
-  width: calc(var(--width)*2);
+  width: calc(var(--width) * 2);
 }
 
-.img-config img{
-  width: calc(var(--width)*2);
-  height: calc(var(--width)*2);
+.img-config img {
+  width: calc(var(--width) * 2);
+  height: calc(var(--width) * 2);
 }
-/* botones nav */
+/* -------------------- botones nav -------------------- */
 
 /*Boton de notificaciones */
 .bell {
@@ -82,13 +80,10 @@
   border-radius: 50px;
   transition: 300ms;
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 /*campana notificaciones*/
 .notification::before {
-  content: "3";
+  content: var(--notification-content, "0");
   color: white;
   font-size: 10px;
   width: 12px;
@@ -143,7 +138,7 @@
   border: none;
 }
 
-/* extras del nav */
+/* -------------------- extras del nav -------------------- */
 
 /* barra de progreso */
 .progress {
@@ -208,8 +203,8 @@
 /* cartas home  */
 
 /* contenedor de las cartas */
-.main {
-  min-height: 80vh;
+.main-home {
+  min-height: 85vh;
 }
 
 /* Estilos cartas modo de juego */
@@ -218,7 +213,7 @@
 }
 
 .card-home {
-  height: 15rem;
+  height: 17rem;
   width: auto;
   border-radius: 10px;
   overflow: hidden;
@@ -228,15 +223,13 @@
   padding: 0.5rem;
 }
 
-.border{
+.img-card-home img {
+  object-fit: cover;
+  /* padding: 0.5rem; */
+  object-position: center;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); */
 }
-
 
 .card-home:hover {
   transform: scale(1.05);
@@ -249,13 +242,8 @@
   box-sizing: border-box;
   top: 0;
   left: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100%;
-  /* padding: 20px; */
   background-color: rgba(242, 242, 242, 0.938);
   transform: rotateX(-90deg);
   transform-origin: bottom;
@@ -273,7 +261,9 @@
   font-weight: 500;
 }
 
-.card-home:hover img { scale: 0;}
+.card-home:hover img {
+  scale: 0;
+}
 
 .card__description {
   margin: 10px 0 0;
@@ -282,38 +272,19 @@
   line-height: 1.4;
 }
 
-.img-card-home {
-  object-fit: cover;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0.5rem;
-  width: 100%;
-  height: 100%;
-}
-
 /* cartas mobile */
-.swiper {
+.swiper-home {
   width: 100%;
   padding: 50px 0;
 }
 
-.swiper-slide {
+.swiper-slide-home {
   position: relative;
   width: 260px;
   height: 280px;
   aspect-ratio: 3/4;
   border-radius: 14px;
   border: 1px solid rgb(177, 1777, 177, 0.4);
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  background-position: center center;
-  border-radius: inherit;
-  user-select: none;
 }
 
 .title {
@@ -325,7 +296,7 @@
   width: max-content;
   text-align: center;
   padding: 10px 10px;
-  background: rgba(46, 39, 39, 0.3);
+  background: var(--clr-botones);
   border-radius: 8px;
   border: 2px solid rgba(177, 177, 177, 0.4);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
@@ -343,11 +314,10 @@
 
 /* responsive para el iphone de Jesus */
 @media only screen and (max-width: 320px) and (max-height: 568px) {
-
-  .icon-home{
+  .icon-home {
     height: calc(var(--width) * 1.5);
   }
-  .icon-liga{
+  .icon-liga {
     height: calc(var(--width) * 3.5);
     width: auto;
   }
@@ -356,14 +326,14 @@
     width: 200px;
     height: auto;
   }
-  .swiper-slide {
+  .swiper-slide-home {
     width: 200px;
     height: 220px;
   }
 }
 
 /* animaciones */
-.modal-home{
+.modal-home {
   transform: translateY(-50%);
   opacity: 0;
   animation: modal-slide 0.3s forwards;
@@ -371,8 +341,7 @@
 
 @keyframes modal-slide {
   to {
-      transform: translateY(0);
-      opacity: 1;
+    transform: translateY(0);
+    opacity: 1;
   }
 }
-
