--- a/NEURODASH/views/invitado/invitado_home.html
+++ b/NEURODASH/views/invitado/invitado_home.html
@@ -42,7 +42,7 @@
                                 <figure class="tm-das-invit d-flex justify-content-center center-element-x">
                                     <img src="../../assets/img/iconos-principales/dash.png" alt="" class="img-global">
                                 </figure>
-                                <a href="" class="d-flex justify-content-center">
+                                <a href="../../index.html" class="d-flex justify-content-center">
                                     <button class="btn-diagol center-element-x font-4">Inicar sesión</button>
                                 </a>
                             </div>
